remove extra then

--- a/markup/partials/drawerContent/Evidence-to-avert-maternal-and-newborn-death.hbs
+++ b/markup/partials/drawerContent/Evidence-to-avert-maternal-and-newborn-death.hbs
@@ -6,7 +6,7 @@
   emergency obstetric and newborn care services. Through this modeling, FHI 360 analyzed the distance women must travel
   to emergency obstetric and newborn care facilities to provide policymakers with accurate information about women's
   travel time. The mapped results showed vast disparities in access, such as demonstrating that roughly a quarter of the
-  population in both countries is more than five hours from lifesaving services. Researchers then then modeled
+  population in both countries is more than five hours from lifesaving services. Researchers then modeled
   improvement scenarios in GIS to show where upgrading facilities, adding ambulances and improving communications could
   curb maternal and newborn mortality.</p>
 <hr>
