--- a/markup/partials/sections/hl4.hbs
+++ b/markup/partials/sections/hl4.hbs
@@ -2,13 +2,18 @@
     {{#content 'svg'}}
         <div class="video-container">
             <video id="video" preload="auto" muted>
-                <source src="https://player.vimeo.com/external/334731206.hd.mp4?s=2b02eb660bfdb6c737b4989ef93dc92a7b59aea7&profile_id=174"  type="video/mp4">
+                <source
+                    src="https://player.vimeo.com/external/334731206.hd.mp4?s=2b02eb660bfdb6c737b4989ef93dc92a7b59aea7&profile_id=174"
+                    type="video/mp4">
+                <source src="../mp4/hl4-mobile-720p.webm" type="video/webm">
             </video>
             <div class="inner-grandient"></div>
             {{> svg/svg-hl4}}
         </div>
     {{/content}}
     {{#content "content"}}
-        <h2 class="fw500">When people have the chance to improve their lives and build their communities, they will seize the opportunity and contribute to a <span class="uppercase bold">better future</span> for everyone.</h2>
+        <h2 class="fw500">When people have the chance to improve their lives and build their communities, they will
+            seize the opportunity and contribute to a <span class="uppercase bold">better future</span> for everyone.
+        </h2>
     {{/content}}
 {{/extend}}
