--- a/markup/partials/sections/intro.hbs
+++ b/markup/partials/sections/intro.hbs
@@ -1,10 +1,11 @@
 {{#extend "elements/animated-section" drawer=false}}
     {{#content "svg"}}
         <div class="video-container">
-            <video 
-                class="slide-video"
-                autoplay="true" muted="muted" loop="true">
-                <source src="https://player.vimeo.com/external/334730760.hd.mp4?s=a932f7f96a713cb45b54fd7df31e2d522df3989d&profile_id=174"  type="video/mp4">
+            <video class="slide-video" autoplay="true" muted="muted" loop="true">
+                <source
+                    src="https://player.vimeo.com/external/334730760.hd.mp4?s=a932f7f96a713cb45b54fd7df31e2d522df3989d&profile_id=174"
+                    type="video/mp4">
+                <source src="../mp4/FHI 360 One Banner v2 1.1 JF.webm" type="video/webm">
             </video>
         </div>
     {{/content}}
