fixes edge bug fullbackground video

--- a/markup/partials/sections/intro.hbs
+++ b/markup/partials/sections/intro.hbs
@@ -1,7 +1,7 @@
 {{#extend "elements/animated-section" drawer=false}}
     {{#content "svg"}}
-        <div class="video-container">
-            <video class="slide-video" autoplay="true" muted="muted" loop="true">
+        <div class="video-container bg-c">
+            <video class="slide-video bg-c-video" autoplay="true" muted="muted" loop="true">
                 <source
                     src="https://player.vimeo.com/external/334730760.hd.mp4?s=a932f7f96a713cb45b54fd7df31e2d522df3989d&profile_id=174"
                     type="video/mp4">
