move back to top into table of contents

--- a/markup/index.hbs
+++ b/markup/index.hbs
@@ -203,7 +203,7 @@ sectionData:
       <img data-moveup src="../img/icons/arrowup-icon.svg" />
       <img data-movedown src="../img/icons/arrowup-icon.svg" />
     </nav>
-    <div class="back-to-top">Back To Top</div>
+    <div id="back-to-top">Back To Top</div>
     <div id="fullpage">
       {{#each sectionData}}
         {{#eq  this.name "Intro" }}
