--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -282,7 +282,12 @@ h6 {
   .toc-progress {
     position: absolute;
     top: -5px;
+    left: -5px;
   }
+}
+
+.ie .toc-toggle .toc-progress {
+  left: -5px;
 }
 
 .close-rightbar.bg {
