--- a/scss/partials/_slides.scss
+++ b/scss/partials/_slides.scss
@@ -12,18 +12,29 @@
   cursor: pointer;
 }
 
-.bg-c video.bg-c-video {
-  width: auto;
-  max-width: none;
-  height: 100vh;
-  position: absolute;
-}
+// videos
+body.no-objectfit-video {
+  .bg-c {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
 
-.bg-c {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    video.bg-c-video {
+      position: absolute;
+      transform: translate(-50%, -50%);
+      left: 50%;
+      top: 50%;
+      width: 100vw;
+      height: auto;
+    }
+  }
+
+  &.bg-c-wide {
+    .bg-c video.bg-c-video {
+      width: 178vh;
+      height: 100vh;
+    }
+  }
 }
 
 .svg-animation,
@@ -120,6 +131,9 @@
 }
 
 [data-section='0'] {
+  .bg.gradient {
+    background: black !important;
+  }
   .video-container {
     video {
       object-position: top center;
