move back to top

--- a/scss/partials/_mobile.scss
+++ b/scss/partials/_mobile.scss
@@ -23,9 +23,9 @@
     font-size: 2rem !important;
   }
 
-  #back-to-top {
-    width: 50px;
-  }
+  // #back-to-top {
+  //   width: 50px;
+  // }
 }
 @media screen and (min-width: $large) {
   .fp-tablecell-auto .fp-tableCell {
