--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -437,11 +437,16 @@ nav#up-down {
   color: white;
   font-size: 16px;
 
-  display: none;
-  top: 30px;
-  left: 30px;
-  bottom: initial;
-  text-align: left;
+  // display: none;
+  // top: 30px;
+  // left: 30px;
+  // bottom: initial;
+  // text-align: left;
+
+  bottom: 30px;
+  right: 30px;
+  text-align: right;
+  
 
   .toc-open & {
     display: inline-block;
@@ -450,8 +455,14 @@ nav#up-down {
 
 .drawer-open,
 .fp-viewing-one {
-  #back-to-top,
   nav#up-down {
+    visibility: hidden;
+  }
+}
+
+.fp-viewing-one {
+  #back-to-top
+  {
     visibility: hidden;
   }
 }
